# icasadi

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
ci/: install.sh  script.sh
matlab/: casadi_generate_c_code.m  example.m
src/: build.rs  lib.rs  main.rs
