[package]
authors = ["Pantelis Sopasakis"]
name = "icasadi"
categories = ["optimization", "automatic differentiation", "interface"]
keywords = ["casadi", "optimization", "interface"]
description = "Rust interface to CasADi functions"
documentation = "https://docs.rs/icasadi"
license = "MIT"
readme = "README.md"
version = "0.1.0"
build = "src/build.rs"

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"